Fix database configuration for MySQL deployment
- Change DigitalOcean app.yaml from PostgreSQL to MySQL
- Update production settings to properly handle MySQL connections
- Add PyMySQL initialization for production MySQL support
- Support both DATABASE_URL and individual DB environment variables
- Configure proper MySQL options and charset for DigitalOcean

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -34,8 +34,8 @@ services:
 
 databases:
   - name: db
-    engine: PG
-    version: "14"
+    engine: MYSQL
+    version: "8"
     size: basic-xs
     num_nodes: 1
 
