--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -13,7 +13,7 @@ services:
     instance_size_slug: basic-xxs
     http_port: 8080
     health_check:
-      http_path: /api/
+      http_path: /
     routes:
       - path: /api
     envs:
@@ -23,9 +23,9 @@ services:
         value: "leave_management.settings_production"
       - key: SECRET_KEY
         type: SECRET
-        value: "your-secret-key-here"
+        value: "django-insecure-#change-this-in-production-2025-leave-mgmt-system-secret-key-abc123"
       - key: ALLOWED_HOSTS
-        value: "leave-management-system-backend.ondigitalocean.app,localhost,127.0.0.1"
+        value: "*"
       - key: DATABASE_URL
         type: SECRET
         value: "${db.DATABASE_URL}"
