--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 Django==5.0.7
 djangorestframework==3.15.2
 
+# Python 3.13 compatibility
+setuptools
+
 # MySQL Database - Pure Python implementation
 PyMySQL==1.1.1
 
