Fix frontend routing: move health check from root path and update service routes

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -22,6 +22,8 @@ services:
     routes:
       - path: /api
       - path: /admin
+      - path: /health
+      - path: /static
     
     envs:
       - key: DEBUG
