App Platform routing: backend only handles /api and /admin; let frontend own root and static paths

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -51,8 +51,7 @@ services:
     routes:
       - path: /api
       - path: /admin
-      - path: /health
-      - path: /static
+      # Backend should not claim / or /static; frontend serves those
     
     envs:
       - key: DEBUG
