--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,8 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-.python-version
+# pyenv (tracked for buildpack compatibility)
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
