--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,14 @@
     "@heroicons/react": "^2.0.18",
     "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "postcss": "^8.4.29",
+    "serve": "^14.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build -l 0.0.0.0:$PORT",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
