--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "serve": "^14.2.1"
   },
   "scripts": {
-    "start": "serve -s build -l 0.0.0.0:$PORT",
+    "start": "serve -s build -p ${PORT:-3000}",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
