--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -6,8 +6,8 @@ djangorestframework==3.15.2
 setuptools
 
 # PostgreSQL Database for Render
-psycopg2-binary==2.9.7
-dj-database-url==2.1.0
+psycopg2-binary==2.9.9
+dj-database-url==2.2.0
 
 # Environment Management
 python-decouple==3.8
@@ -21,20 +21,17 @@ djangorestframework-simplejwt==5.3.0
 # API Filtering
 django-filter==23.2
 
-# File Upload Handling
-Pillow==10.0.0
+# File Upload Handling - Updated for Python 3.13 compatibility
+Pillow==10.4.0
 
 # Excel File Processing
-openpyxl==3.1.2
+openpyxl==3.1.5
 
 # Timezone Support
-pytz==2023.3
-
-# Decimal handling
-decimal-dj==0.1.2
+pytz==2024.1
 
 # WSGI Server for Production
-gunicorn==21.2.0
+gunicorn==22.0.0
 
 # Static Files Handling
-whitenoise==6.5.0
+whitenoise==6.7.0
