--- a/frontend-render.yaml
+++ b/frontend-render.yaml
@@ -1,11 +1,10 @@
-# Frontend-only deployment configuration
+# Frontend as Web Service (better than static site)
 services:
   - type: web
     name: leave-management-frontend
-    runtime: static
+    runtime: node
     buildCommand: cd frontend && npm ci && npm run build
-    staticPublishPath: frontend/build
-    pullRequestPreviewsEnabled: false
+    startCommand: cd frontend && npx serve -s build -p $PORT
     envVars:
       - key: REACT_APP_API_URL
-        value: https://leave-management-backend.onrender.com
+        value: https://leave-management-backend.onrender.com/api
