--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,16 @@
 services:
-  # Web Service for Django Backend
+  # Unified Web Service - Django Backend + React Frontend
   - type: web
-    name: leave-management-backend
+    name: leave-management-app
     runtime: python
     plan: free
-    buildCommand: pip install -r requirements-render.txt && python manage.py collectstatic --noinput && python manage.py migrate
+    buildCommand: |
+      pip install -r requirements-render.txt && 
+      curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash - &&
+      sudo apt-get install -y nodejs &&
+      cd frontend && npm ci && npm run build && cd .. &&
+      python manage.py collectstatic --noinput && 
+      python manage.py migrate
     startCommand: gunicorn leave_management.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -19,8 +25,6 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
-      - key: CORS_ALLOWED_ORIGINS
-        value: "https://leave-management-frontend.onrender.com"
 
 databases:
   - name: leave-management-db
