--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,8 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
+      - key: DEBUG_SECRET
+        value: secret-debug-token
 
 databases:
   - name: leave-management-db
