Remove Render hostnames and settings references from env files

--- a/leave-management-backend.env
+++ b/leave-management-backend.env
@@ -1,5 +1,5 @@
-ALLOWED_HOSTS=.onrender.com
-CORS_ALLOWED_ORIGINS=https://leave-management-frontend.onrender.com
+﻿ALLOWED_HOSTS=.example.com
+CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
 DATABASE_URL=postgresql://leave_management_db_p202_user:DthevcyzPbVRMUN00Dptvwh7WMVr0qWy@dpg-d3he04ali9vc73e2a2ug-a/leave_management_db_p202
 DEBUG=False
 DJANGO_SETTINGS_MODULE=leave_management.settings_production
