--- a/leave-management-app.env
+++ b/leave-management-app.env
@@ -1,8 +1,8 @@
-AAKORFU_EMAIL=aakorfu@umbcapital.com
+﻿AAKORFU_EMAIL=aakorfu@umbcapital.com
 AAKORFU_PASSWORD=AustineAkorfu
 ADMIN_EMAIL=admin@company.com
 ADMIN_PASSWORD=JoshuamustHack_7
-ALLOWED_HOSTS=.onrender.com
+ALLOWED_HOSTS=.example.com
 DATABASE_URL=postgresql://leave_management_db_p202_user:DthevcyzPbVRMUN00Dptvwh7WMVr0qWy@dpg-d3he04ali9vc73e2a2ug-a/leave_management_db_p202
 DEBUG=False
 DEBUG_SECRET=secret-debug-token
