Ignore leave-management env files, add .env.example with redacted values

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,34 @@
-# Django Configuration
-SECRET_KEY=your-secret-key-here-change-this-in-production
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+## Example environment variables for Leave-Request-Management
+## Copy this file to .env (or to leave-management-app.env / leave-management-backend.env locally)
+## and fill in real values. DO NOT commit real secrets to the repository.
 
-# MySQL Database Configuration
-DB_NAME=leave_management
-DB_USER=your_db_user
-DB_PASSWORD=your_secure_password_here
-DB_HOST=localhost
-DB_PORT=3306
-
-# Email Configuration (Optional)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=your_email@gmail.com
-EMAIL_HOST_PASSWORD=your_email_app_password
-DEFAULT_FROM_EMAIL=noreply@yourdomain.com
-
-# Production Settings
+# Django configuration
+SECRET_KEY=replace-with-secure-secret
+DEBUG=False
 DJANGO_SETTINGS_MODULE=leave_management.settings_production
+ALLOWED_HOSTS=.example.com
 
-# CORS Settings
-CORS_ALLOWED_ORIGINS=https://your-frontend-domain.com
+# Database (Postgres example)
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DBNAME
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DBNAME
+
+# CORS and frontend
+CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
+
+# Optional flags used by management commands during first-run (dev only)
+RUN_DASHBOARD_FIX_ONCE=0
+RUN_FIX_PRODUCTION_DATA=0
+SETUP_FRESH_DATABASE=0
+
+# Seeded/demo user credentials (only for local/dev; remove in production)
+AAKORFU_EMAIL=example@company.com
+AAKORFU_PASSWORD=changeme
+GSAFO_EMAIL=example@company.com
+GSAFO_PASSWORD=changeme
+JMANKOE_EMAIL=example@company.com
+JMANKOE_PASSWORD=changeme
+HRADMIN_EMAIL=example@company.com
+HRADMIN_PASSWORD=changeme
+
+# Example: JSON used by seeding command (keep commented out)
+# SEED_USERS='[ { "username": "jmankoe", "first_name": "Ato", "last_name": "Mankoe", "email": "jmankoe@umbcapital.com", "role": "manager", "department": "IT", "password": "Atokwamena" } ]'
