frontend: add scripts/serve.js and update start; api base picks :8000 in dev and same-origin in production

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "serve": "^14.2.1"
   },
   "scripts": {
-    "start": "serve -s build -p ${PORT:-3000}",
+    "start": "node scripts/serve.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
