--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ djangorestframework-simplejwt==5.3.0
 gitdb==4.0.12
 GitPython==3.1.45
 gunicorn==22.0.0
+waitress==3.0.2
+uvicorn==0.34.0
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
