--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,29 @@
 {
-  "name": "leave-management-frontend",
+  "name": "leave-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "date-fns": "^2.30.0",
-    "lucide-react": "^0.279.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "serve": "^14.2.1"
-  },
   "scripts": {
-    "start": "node scripts/serve.js",
     "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "postcss": "^8.4.33",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.13"
   },
   "browserslist": {
     "production": [
@@ -45,10 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
   }
-  
 }
