--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,30 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.15.0",
+    "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.279.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
-    "serve": "^14.2.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "serve": "^14.2.1",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "start": "node scripts/serve.js",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "heroku-postbuild": "npm run build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +45,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/node": "^25.0.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
   }
-  
 }
