--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,8 @@
-REACT_APP_API_BASE=http://127.0.0.1:8000
+# Example frontend env
+# Use REACT_APP_API_URL to point the SPA to your backend API
+# Local PC only:
+REACT_APP_API_URL=http://127.0.0.1:8000/api
+
+# Or, for other devices on the same Wi-Fi (replace with your LAN IP):
+# REACT_APP_API_URL=http://10.2.18.62:8000/api
 
